# dot-agent-deck

./: .dockerignore  .dot-agent-deck.toml  .env.vals.yaml  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yml  bacon.toml  build.rs  devbox.json  opencode.json  pyproject.toml
.cargo/: config.toml
.config/: nextest.toml
.dot-agent-deck/: prd-20-w1-redtests.md
.dot-agent-deck/m2-recordings/: README.md  delivery_001_session_start_creates_card.cast  delivery_001_session_start_creates_card.md  pane_004_card_title_row.md
.dot-agent-deck/m3-recordings/: README.md  claude_001_thinking_working_idle.cast  claude_001_thinking_working_idle.md
.github/: labeler.yml
.github/workflows/: ci.yml  docs-publish.yml  docs.yml  labeler.yml  release.yml  (+1 more)
assets/: config_gen_prompt.md  idle-art-prompt.md  roles.toml
audit/: pre-daemon-parity-audit.md
changelog.d/: +fix-version-check.bugfix.md  +ghostty.doc.md  +help-overlay.feature.md  +mouse-enabled-config.feature.md  100.bugfix.md  103.bugfix.md  104.bugfix.md  106.feature.md  107.bugfix.md  110.bugfix.md  111.bugfix.md  112.feature.md  113.bugfix.md  116.feature.md  118.bugfix.md  120.breaking.md  120.feature.md  127.feature.md  128.bugfix.md  128.misc.md  13.bugfix.md  138.misc.md  139.feature.md  14.bugfix.md  144.feature.md  147.bugfix.md  148.feature.md  15.bugfix.md  15.feature.md  151.bugfix.md  154.bugfix.md  155.feature.md  16.feature.md  160.bugfix.md  161.bugfix.md  161.feature.md  162.feature.md  165.bugfix.md  17.bugfix.md  17.feature.md  (+74 more)
crates/keybindings/: Cargo.toml
crates/keybindings/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: event.rs  lib.rs  record.rs  socket.rs  wire.rs
docs/: configuration.md  experimental-flag.md  getting-started.md  getting-started.mdx  img  installation.md  intro.md  keyboard-shortcuts.md  license.md  orchestration.md  pi-agent.md  remote-environments.md  remote-recipes.md  remote-requirements.md  rendering-contract.md  scheduled-tasks.md  session-management.md  troubleshooting.md  workspace-modes.md
examples/: diff_config.rs  provision-upcloud-vm.sh  render_config_gen_prompt.rs  send_event.rs
gui/: .gitignore  README.md  package-lock.json  package.json
gui/core/: Cargo.toml
gui/core/src/: agent.rs  client.rs  daemon.rs  keys.rs  lib.rs
gui/core/tests/: agent_stream.rs  events.rs  handshake.rs
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs  main.rs
pi-extension/: README.md  package-lock.json  package.json  tsconfig.json
prds/: 1-agent-status-dashboard.md  10-terminal-demo-recording.md  100-fix-orchestrator-enter-key-newline.md  103-local-daemon-build-version-handshake.md  104-snapshot-replay-preserves-pty-dims.md  106-hide-command-field-orchestration-form.md  107-orchestration-tab-name-from-form.md  110-fix-session-reuse-vs-f9-respawn.md  111-fix-orchestration-tab-hydration-remote-config.md  112-truncate-tab-names-to-fit-screen.md  113-clear-deck-selection-on-tab-switch.md  116-analyze-improved-configs-for-prompt-refinement.md  12-dashboard-ui-improvements.md  120-scheduled-issue-dispatch.md  126-agent-driven-notifications.md  127-cron-scheduled-prompt-dispatch.md  128-orchestrator-spawn-prompt-daemon-side.md  13-light-background-compatibility.md  139-experimental-feature-flag.md  140-orchestration-session-partitioning.md  143-supervised-always-on-daemon.md  144-ui-surface-roominess.md  147-orchestration-deck-card-height.md  148-remote-connect-survive-sleep-wake.md  154-switch-to-dashboard-on-card-create.md  155-centralized-color-palette.md  16-toggle-stacked-tiled-layout.md  161-compatibility-based-version-mismatch-handling.md  162-restore-live-session-status-on-reconnect.md  163-windows-platform-backends.md  164-windows-release-e2e-docs.md  168-mode-chip-row-wrap.md  17-aggregate-stats-bar.md  170-login-shell-path-and-agent-command.md  174-cross-project-orchestration-dispatch.md  176-desktop-gui.md  18-permission-prompt-control.md  180-prd-demo-reel.md  19-smart-session-sorting.md  190-opencode-auto-install-daemon-lifecycle.md  (+49 more)
scripts/: assemble-changelog.sh
site/: Dockerfile  docusaurus.config.js  nginx-default.conf  package-lock.json  package.json  sidebars.js
src/: agent_pty.rs  agent_registry.rs  ascii_art.rs  build_id.rs  build_version_handshake.rs  codex_hooks_manage.rs  config.rs  config_gen.rs  config_validation.rs  connect.rs  daemon.rs  daemon_attach.rs  daemon_client.rs  daemon_protocol.rs  daemon_stop.rs  embedded_pane.rs  error.rs  event.rs  features.rs  hook.rs  hooks_manage.rs  hyperlink.rs  init.rs  issue_dispatch.rs  issue_dispatch_run.rs  keybindings.rs  lib.rs  llm.rs  login_shell.rs  main.rs  mode_manager.rs  opencode_manage.rs  orchestrator_ext.rs  palette.rs  pane.rs  pane_input.rs  project_config.rs  remote.rs  schedule_cli.rs  scheduler.rs  (+11 more)
tests/: CATALOG.md  agent_detection.rs  agent_event.rs  agent_metadata.rs  build_version_handshake.rs  client_write_to_pane_atomic.rs  codex_adapter.rs  codex_hook_ingestion.rs  codex_hooks_safety.rs  daemon_attach_cleanup.rs  daemon_integration.rs  daemon_lifecycle.rs  daemon_protocol.rs  daemon_stop.rs  delegate_prompt_injection.rs  e2e_agent_event.rs  e2e_chain_smoke_claude.rs  e2e_cli_continue_removed.rs  e2e_codex_hooks.rs  e2e_codex_spawn_paths.rs  e2e_codex_worker.rs  e2e_codex_wrapper.rs  e2e_daemon_idle_schedule.rs  e2e_daemon_orphan_exit.rs  e2e_dashboard_selection.rs  e2e_delegate_work_done_chain.rs  e2e_experimental_flag.rs  e2e_handshake.rs  e2e_hook_delivery.rs  e2e_issue_dispatch.rs  e2e_issue_dispatch_live.rs  e2e_issue_dispatch_real.rs  e2e_keybindings.rs  e2e_login_path.rs  e2e_mode_seed_prompt.rs  e2e_mouse_buttonbar.rs  e2e_mouse_dashboard.rs  e2e_mouse_form.rs  e2e_mouse_inline.rs  e2e_mouse_modal.rs  (+67 more)
xtask/docs/: Cargo.toml
xtask/docs/src/: lib.rs  main.rs
xtask/linkage-check/: Cargo.toml  m2.allowlist
xtask/linkage-check/src/: list_tests.rs  main.rs
xtask/spec/: Cargo.toml
xtask/spec/src/: lib.rs
(+237 files in other folders)
