[workspace]
members = [
    ".",
    "crates/protocol",
    "crates/keybindings",
    "gui/core",
    "xtask/docs",
    "xtask/linkage-check",
    "xtask/spec",
]
# PRD #176 M1.2: the GUI core is a plain-Rust lib (no webview deps), so it
# joins the default set the Rust gates run over — `cargo fmt`/`clippy`/`test`
# /`test-fast` exercise it with no extra flags. The root binary and the GUI
# core are the default members; `crates/protocol` and the `xtask/*` helpers
# stay members-but-not-default exactly as before (their tests run via `-p` or
# `--workspace`).
#
# PRD #176: `crates/keybindings` IS a default member (unlike `protocol`): it is
# consumed by BOTH front-ends and its 33 tests are the contract that keeps TUI
# and GUI shortcuts identical, so they belong in the per-task `test-fast` gate.
# The crate is light (crossterm/serde/toml only), so the cost is negligible.
default-members = [".", "crates/keybindings", "gui/core"]
# PRD #176 M1.2 / Risks ("JS toolchain must not pollute the Rust gates"): the
# Tauri shell depends on `tauri`, which needs the system WebKitGTK dev
# libraries. Excluding it keeps it OUT of every workspace build/lock so a
# missing webview lib can never break `cargo fmt`/`clippy`/`test-fast`. Build
# it deliberately from `gui/` once the webview toolchain is provisioned.
exclude = ["gui/src-tauri"]

[package]
name = "dot-agent-deck"
version = "0.1.0"
edition = "2024"

[dependencies]
# PRD #176 M1.1: shared daemon wire types (frame codec, AttachRequest/Response,
# AgentRecord, event structs). The binary re-exports these from
# `daemon_protocol` / `event` / `agent_pty` so existing call sites are unchanged.
protocol = { path = "crates/protocol" }
# PRD #176: shared keybinding model (Action set, notation parser,
# KeybindingConfig, TOML/defaults loader). `src/keybindings.rs` is now a
# re-export shim over this crate so the TUI and GUI core share one definition.
keybindings = { path = "crates/keybindings" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.30"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
semver = "1"
portable-pty = "0.8"
libc = "0.2"
vt100 = "0.16"
futures-util = "=0.3.32"
regex = "1"
open = "5"
unicode-width = "0.2"
cron = "0.16.0"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
serial_test = "3"
# Integration tests don't inherit the package's `[dependencies]`, so the
# harness/L2 tests need `libc` listed here to call `kill(2)` directly (process-
# group cleanup on Drop; orphan-exit liveness polling).
libc = "0.2"
# PRD #77 Decision 22: insta pinned to a specific version, not `latest`,
# so a future patch release cannot silently reshape snapshot diffs.
insta = { version = "=1.47.2", features = ["yaml"] }
spec = { path = "xtask/spec" }
# PRD #77 Decision 30 / M4: the L2 harness's recording dump also
# regenerates the paired .md so local DOT_AGENT_DECK_RECORD=1 runs
# keep the docs in sync without a separate `cargo xtask docs --tests`.
xtask-docs = { path = "xtask/docs" }

[features]
# PRD #77 Decision 6: `cargo test-e2e` (alias) enables this feature so
# the L2 PTY suite compiles in. CI runs `cargo test-fast` only and never
# sees these tests. Each `tests/e2e_*.rs` file opens with
# `#![cfg(feature = "e2e")]`.
e2e = []

[[example]]
name = "send_event"
path = "examples/send_event.rs"
