# Standalone workspace root. The repo-root Cargo.toml already lists this crate
# in `workspace.exclude`, but building it from here (`cargo build` inside
# gui/src-tauri) still needs an explicit empty `[workspace]` table so Cargo
# treats it as its own root with its own Cargo.lock — otherwise Cargo walks up,
# finds the excluded-but-present root manifest, and errors with "believes it's
# in a workspace when it's not". This keeps the webview-dependent shell fully
# isolated from the Rust gates (PRD #176 M1.2).
[workspace]

[package]
name = "dad-gui"
version = "0.1.0"
edition = "2024"
description = """
PRD #176 desktop GUI Tauri shell — a thin webview host layered over \
`dad-gui-core`. Deliberately EXCLUDED from the Cargo workspace (see the root \
Cargo.toml `exclude`): it depends on `tauri`, which needs the system WebKitGTK \
dev libraries, and those must never gate `cargo fmt`/`clippy`/`test-fast`. \
Build it on its own once the webview toolchain is provisioned.
"""

[lib]
name = "dad_gui"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# The testable core: connect + Hello negotiation + frame bridge live here, not
# in the shell.
dad-gui-core = { path = "../core" }
protocol = { path = "../../crates/protocol" }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# M1.3: PTY bytes carry arbitrary non-UTF-8 data, so the terminal byte stream
# is base64-framed across the Tauri IPC boundary (both directions) to stay
# byte-exact. The throughput stress test of this path is deferred (Decision #8).
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
# Tauri's custom-protocol asset serving is enabled for release bundles.
custom-protocol = ["tauri/custom-protocol"]
