[package]
name = "xtask-docs"
version = "0.0.0"
edition = "2024"
publish = false

# PRD #77 Decision 30: paired test docs for every `#[spec]` test.
# Library exposes the generator surface to the linkage-check
# dispatcher and to the L2 harness's regen-on-record hook; binary is
# the entrypoint `cargo xtask docs --tests` dispatches to.

[lib]
name = "xtask_docs"
path = "src/lib.rs"

[[bin]]
name = "xtask-docs"
path = "src/main.rs"

[dependencies]
proc-macro2 = "1"
regex = "1"
syn = { version = "2", features = ["full", "parsing"] }
# M4.1 auditor S3: `write_all` now writes via a tempfile in the
# destination's parent directory + atomic rename, so concurrent
# `cargo xtask docs --tests` invocations cannot race-corrupt a .md
# mid-write.
tempfile = "3"
